cc_library(
	name = "rrt",
	hdrs = [
      "rrt.h",
      "rrt_star.h",
      "planner.h",
      "nearest_neighbor.h",
      "rrt_planner.h",
      "birrt_planner.h",
      "rrt_star_planner.h",
      "birrt_star_planner.h",
      "space.h",
      "space_2d.h",
    ],
	srcs = [
       "rrt.cc",
       "rrt_star.cc",
       "nearest_neighbor.cc",
       "rrt_planner.cc",
       "birrt_planner.cc",
       "rrt_star_planner.cc",
       "birrt_star_planner.cc",
       "space_2d.cc",
    ],
	includes = ["."],
	visibility = ["//visibility:public"],
)
